refactor: move log-platform to root as separate service
- Move log-platform from backend/ to root level
- Update docker-compose.yml to reference ../log-platform
- log-platform is a shared service used by multiple components

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -66,7 +66,7 @@ services:
 
   alert-engine:
     build:
-      context: ./log-platform
+      context: ../log-platform
       dockerfile: Dockerfile.alertd
     container_name: susbonk-alertd
     environment:
@@ -84,7 +84,7 @@ services:
 
   log-ingest:
     build:
-      context: ./log-platform
+      context: ../log-platform
       dockerfile: Dockerfile.ingestd
     container_name: susbonk-ingestd
     environment:
