--- a/log-platform/Dockerfile.alertd
+++ b/log-platform/Dockerfile.alertd
@@ -2,7 +2,9 @@ FROM rust:1.83 as builder
 
 WORKDIR /app
 COPY Cargo.toml ./
-COPY src ./src
+COPY log_platform_common ./log_platform_common
+COPY ingestd ./ingestd
+COPY alertd ./alertd
 
 RUN cargo build --release --bin alertd
 
@@ -17,6 +19,7 @@ COPY --from=builder /app/target/release/alertd .
 
 ENV RUST_LOG=info
 ENV OPENSEARCH_URL=http://os01:9200
+ENV INGEST_URL=http://log-ingest:8080
 
 EXPOSE 8080
 
