--- a/log-platform/Dockerfile.ingestd
+++ b/log-platform/Dockerfile.ingestd
@@ -2,7 +2,9 @@ FROM rust:1.83 as builder
 
 WORKDIR /app
 COPY Cargo.toml ./
-COPY src ./src
+COPY log_platform_common ./log_platform_common
+COPY ingestd ./ingestd
+COPY alertd ./alertd
 
 RUN cargo build --release --bin ingestd
 
