--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -69,10 +69,14 @@ services:
       context: ../log-platform
       dockerfile: Dockerfile.alertd
     container_name: susbonk-alertd
+    env_file:
+      - ../.env
     environment:
       - OPENSEARCH_URL=http://os01:9200
       - INGEST_URL=http://log-ingest:8080
       - RUST_LOG=info
+      - SMTP_SERVER=postal-smtp
+      - SMTP_PORT=2525
     depends_on:
       os01:
         condition: service_healthy
