--- a/postal/config/postal.yml
+++ b/postal/config/postal.yml
@@ -1,24 +1,24 @@
 version: 2
 
 postal:
-  web_hostname: postal.localhost
+  web_hostname: localhost
   web_protocol: http
-  smtp_hostname: postal.localhost
+  smtp_hostname: localhost
 
 main_db:
   host: postal-mariadb
   username: root
-  password: <%= ENV['POSTAL_DB_PASSWORD'] || 'postal123' %>
+  password: <%= ENV['POSTAL_DB_PASSWORD'] %>
   database: postal
 
 message_db:
   host: postal-mariadb
   username: root
-  password: <%= ENV['POSTAL_DB_PASSWORD'] || 'postal123' %>
+  password: <%= ENV['POSTAL_DB_PASSWORD'] %>
   prefix: postal
 
 smtp_server:
-  default_bind_address: "::"
+  default_bind_address: "0.0.0.0"
   default_port: 2525
 
 dns:
@@ -45,5 +45,5 @@ logging:
   stdout: true
 
 web_server:
-  default_bind_address: "::"
+  default_bind_address: "0.0.0.0"
   default_port: 5000
