--- a/postal/docker-compose.yml
+++ b/postal/docker-compose.yml
@@ -3,10 +3,9 @@ version: '3.8'
 services:
   postal-mariadb:
     image: mariadb:10.11
+    platform: linux/amd64
     container_name: postal-mariadb
     restart: unless-stopped
-    env_file:
-      - ../.env
     environment:
       MARIADB_DATABASE: postal
       MARIADB_ROOT_PASSWORD: ${POSTAL_DB_PASSWORD}
@@ -23,11 +22,12 @@ services:
 
   postal-web:
     image: ghcr.io/postalserver/postal:3.3.3
+    platform: linux/amd64
     container_name: postal-web
     restart: unless-stopped
     command: postal web-server
     ports:
-      - "5000:5000"
+      - "5001:5000"
     env_file:
       - ../.env
     environment:
@@ -50,6 +50,7 @@ services:
 
   postal-smtp:
     image: ghcr.io/postalserver/postal:3.3.3
+    platform: linux/amd64
     container_name: postal-smtp
     restart: unless-stopped
     command: postal smtp-server
@@ -72,6 +73,7 @@ services:
 
   postal-worker:
     image: ghcr.io/postalserver/postal:3.3.3
+    platform: linux/amd64
     container_name: postal-worker
     restart: unless-stopped
     command: postal worker
