refactor: standardize env var naming (OS_URL, OS_INGEST_URL)
- Rename OPENSEARCH_URL -> OS_URL
- Rename INGEST_URL -> OS_INGEST_URL
- Update all Rust code, Dockerfiles, shell scripts, docker-compose
- Add OS_URL to .env and .env.example

--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,4 @@ POSTGRES_SQLX_LOGGING=true
 POSTGRES_SQLX_LOGGING_LEVEL=info
 
 OS_INGEST_URL=http://log-ingest:8080/ingest
+OS_URL=http://os01:9200
