--- a/log-platform/Dockerfile.alertd
+++ b/log-platform/Dockerfile.alertd
@@ -18,8 +18,8 @@ WORKDIR /app
 COPY --from=builder /app/target/release/alertd .
 
 ENV RUST_LOG=info
-ENV OPENSEARCH_URL=http://os01:9200
-ENV INGEST_URL=http://log-ingest:8080
+ENV OS_URL=http://os01:9200
+ENV OS_INGEST_URL=http://log-ingest:8080
 
 EXPOSE 8080
 
