refactor: remove duplicate services, switch to Brevo SMTP
- Remove backend/alertd and backend/ingestd (duplicates of log-platform/)
- Remove postal/ (switched to Brevo SMTP relay)
- Add EMAIL_ENABLED config to conditionally enable email alerts
- Update email integration test defaults for Brevo
- Remove test spam log call from alertd startup

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ POSTGRES_PASSWORD=your_postgres_password
 POSTGRES_HOST=pg-database
 POSTGRES_PORT=5432
 
-# Alerts
+# Alerts (Brevo SMTP)
 EMAIL_ENABLED=1
 SMTP_SERVER=smtp-relay.brevo.com
 SMTP_PORT=587
@@ -16,10 +16,8 @@ ALERT_EMAIL_FROM=your_email@example.com
 ALERT_DETAILS_LIMIT=10
 ERROR_THRESHOLD=1
 WARNING_THRESHOLD=3
-
-# Postal
-POSTAL_DB_PASSWORD=your_postal_db_password
-POSTAL_RAILS_SECRET=generate_with_openssl_rand_hex_64
+DISK_THRESHOLD_GB=50
+CHECK_INTERVAL_SECS=60
 
 # Django Admin
 DJANGO_ADMIN_USER=admin
