feat: Complete backend-frontend integration with REST API
- Implement FastAPI backend with 16 endpoints (auth, chats, prompts, user states)
- Create minimal API client layer using native fetch
- Wire authentication flow (register, login, auto-login)
- Integrate real data display (chats, spam counts, whitelist, custom prompts)
- Add full CRUD for custom prompts
- Implement whitelist management (view/remove trusted users)
- Handle empty states and loading states
- Add environment configuration (.env)
- Create comprehensive documentation (deployment, integration, testing)

Backend:
- 32 files created (API handlers, models, schemas, tests, docs)
- JWT authentication with bcrypt password hashing
- PostgreSQL with SQLAlchemy ORM
- Connection pooling and transaction rollback
- Pydantic validation and OpenAPI docs
- Docker Compose deployment

Frontend:
- 5 API client files (client, auth, chats, userStates, prompts)
- 6 components updated with real API integration
- Token persistence in localStorage
- Auto-login on page reload
- Real-time data from backend
- Loading and error states

Integration:
- 13 API endpoints connected
- Registration → Login → Dashboard flow
- Empty chats → Onboarding
- Whitelist CRUD operations
- Custom prompts CRUD operations
- Type-safe API calls with TypeScript

Tested:
- Registration and login flows
- Auto-login persistence
- Chat data fetching
- Whitelist management
- Custom prompt creation/deletion
- Error handling and 401 responses

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -176,6 +176,28 @@ services:
       - db-net
     restart: unless-stopped
 
+  api-backend:
+    container_name: susbonk-api
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file:
+      - ../.env
+    ports:
+      - "8000:8000"
+    depends_on:
+      pg-database:
+        condition: service_healthy
+    networks:
+      - db-net
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+
 volumes:
   opensearch-data:
   postgres-data:
