--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
     "python-multipart>=0.0.6",
+    "httpx>=0.25.0",
+    "colorama>=0.4.6",
 ]
 
 [build-system]
