--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,7 +7,8 @@ dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
     "sqlalchemy>=2.0.0",
-    "psycopg2-binary>=2.9.0",
+    "asyncpg>=0.29.0",
+    "orjson>=3.9.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
     "python-jose[cryptography]>=3.3.0",
@@ -27,4 +28,5 @@ dev-dependencies = [
     "pytest-asyncio>=0.21.0",
     "httpx>=0.25.0",
     "pytest-cov>=4.1.0",
+    "aiosqlite>=0.19.0",
 ]
