Major refactor: restructure telegram-bot, add AI service, update frontend components

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@ FROM ghcr.io/astral-sh/uv:python3.11-bookworm-slim
 WORKDIR /app
 
 COPY pyproject.toml .
-RUN uv pip install --system fastapi uvicorn sqlalchemy psycopg2-binary pydantic pydantic-settings python-jose passlib email-validator python-multipart httpx colorama
+RUN uv pip install --system fastapi uvicorn sqlalchemy psycopg2-binary pydantic pydantic-settings python-jose passlib email-validator python-multipart httpx colorama asyncpg redis orjson
 
 COPY . .
 
