--- a/telegram-bot/Cargo.toml
+++ b/telegram-bot/Cargo.toml
@@ -1,20 +1,39 @@
 [workspace]
-members = ["telegram-bot", "config"]
+members = ["app", "config", "entity"]
 resolver = "2"
 
+[workspace.package]
+version = "0.1.0"
+edition = "2024"
+
 [workspace.dependencies]
+log = "0.4.29"
+teloxide = { version = "0.17.0", features = [
+    "macros",
+    "webhooks",
+    "webhooks-axum",
+] }
+thiserror = "2.0.17"
+tracing = "0.1.44"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+url = "2.5.8"
 tokio = { version = "1.0", features = ["full"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-reqwest = { version = "0.11", features = ["json"] }
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 anyhow = "1.0"
-chrono = { version = "0.4", features = ["serde"] }
-uuid = { version = "1.0", features = ["v4", "serde"] }
-axum = "0.7"
-teloxide = { version = "0.13", features = ["webhooks", "macros"] }
-redis = { version = "0.24", features = ["tokio-comp", "streams"] }
-sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
-regex = "1.0"
+dotenvy = "0.15"
+serde = { version = "1.0", features = ["derive"] }
+config = "0.14"
 once_cell = "1.19"
+tracing-core = "0.1.36"
+reqwest = { version = "0.13.1", default-features = false, features = ["json"] }
+serde_json = "1.0.149"
+tracing-log = "0.2.0"
+chrono = { version = "0.4.42", features = ["std", "clock", "serde"] }
+sea-orm = { version = "1.1.19", features = [
+    "sqlx-postgres",
+    "runtime-tokio-rustls",
+    "macros",
+    "with-chrono",
+    "with-uuid",
+] }
+uuid = "1.19.0"
+regex = "1.12.2"
