--- a/telegram-bot/config/Cargo.toml
+++ b/telegram-bot/config/Cargo.toml
@@ -1,8 +1,16 @@
 [package]
 name = "config"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
-once_cell = "1.19"
-serde = { workspace = true }
+anyhow.workspace = true
+thiserror.workspace = true
+config.workspace = true
+dotenvy.workspace = true
+once_cell.workspace = true
+serde.workspace = true
+log.workspace = true
+tracing.workspace = true
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
+url.workspace = true
