feat: Complete FastAPI backend blueprint migration (13 tasks)
BREAKING CHANGES:
- Upgrade to Python 3.13 + uv dependency management
- Replace python-jose with pyjwt, bcrypt with argon2-cffi
- Restructure directory layout (core/, models/, schemas/, handlers/)
- Convert settings to UPPERCASE environment variables
- Implement typed SQLAlchemy 2.0 models with Mapped[] syntax
- Update all schemas to Pydantic v2 with ConfigDict
- Replace session management with db_helper pattern

NEW FEATURES:
- Chat-prompt linking CRUD with priority support
- Redis streams integration for deleted messages
- Platform user ID normalization (telegram_user_id → platform_user_id)
- Configurable prompt selection strategy per chat
- Enhanced error handling with proper HTTP status codes

TECHNICAL IMPROVEMENTS:
- 18 API endpoints with complete OpenAPI documentation
- Argon2 password hashing with JWT Bearer authentication
- Event-driven Redis streams (deleted_messages:{chat_id} pattern)
- Graceful Redis failure handling (502 errors)
- Comprehensive ownership checks and validation
- Production-ready error handling and documentation

MIGRATION COMPLETED:
✅ Task 1: API and DB scope decisions
✅ Task 2: Python 3.13 + uv runtime upgrade
✅ Task 3: Directory structure reorganization
✅ Task 4: Settings standardization (UPPERCASE)
✅ Task 5: Unified db_helper session pattern
✅ Task 6: Typed SQLAlchemy 2.0 models
✅ Task 7: Complete Pydantic v2 schemas
✅ Task 8: Argon2 + pyjwt authentication
✅ Task 9: Blueprint-compliant API handlers
✅ Task 10: Chat-prompt linking CRUD
✅ Task 11: Redis streams integration
✅ Task 12: Database schema compliance
✅ Task 13: Complete validation

All endpoints tested and production-ready with comprehensive validation.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,7 +2,7 @@
 name = "susbonk-api"
 version = "0.1.0"
 description = "SusBonk Dashboard API Backend"
-requires-python = ">=3.11"
+requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
@@ -11,8 +11,8 @@ dependencies = [
     "orjson>=3.9.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
-    "python-jose[cryptography]>=3.3.0",
-    "passlib[bcrypt]>=1.7.4",
+    "pyjwt>=2.8.0",
+    "argon2-cffi>=23.1.0",
     "python-multipart>=0.0.6",
     "httpx>=0.25.0",
     "colorama>=0.4.6",
