--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,9 @@
-FROM ghcr.io/astral-sh/uv:python3.11-bookworm-slim
+FROM ghcr.io/astral-sh/uv:python3.13-bookworm-slim
 
 WORKDIR /app
 
 COPY pyproject.toml .
-RUN uv pip install --system fastapi uvicorn sqlalchemy psycopg2-binary pydantic pydantic-settings python-jose passlib email-validator python-multipart httpx colorama asyncpg redis orjson
+RUN uv pip install --system -r pyproject.toml
 
 COPY . .
 
