Add root documentation and Docker orchestration
- Add README.md with system overview, services, quick start, and deployment notes
- Add TODO.md tracker organized by subsystem and priority with known gaps
- Add docker-compose.yml orchestrating all services with health checks
- Add .env.example template for environment configuration
- Update documentation links and service ports

--- a/.env.example
+++ b/.env.example
@@ -1,50 +1,29 @@
+# Environment Configuration for SusBonk
+
 # Database
-POSTGRES_DB=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=your_postgres_password
-POSTGRES_HOST=pg-database
-POSTGRES_PORT=5432
+POSTGRES_DB=susbonk
+POSTGRES_USER=susbonk
+POSTGRES_PASSWORD=susbonk_dev
 
-# Alerts (Brevo SMTP)
-EMAIL_ENABLED=1
-SMTP_SERVER=smtp-relay.brevo.com
-SMTP_PORT=587
-SMTP_USER=your_brevo_user@smtp-brevo.com
-SMTP_PASSWORD=your_brevo_smtp_key
-ALERT_EMAIL_TO=your_email@example.com
-ALERT_EMAIL_FROM=your_email@example.com
-ALERT_DETAILS_LIMIT=10
-ERROR_THRESHOLD=1
-WARNING_THRESHOLD=3
-DISK_THRESHOLD_GB=50
-CHECK_INTERVAL_SECS=60
+# Redis
+# No specific config needed for development
 
-# Django Admin
-DJANGO_ADMIN_USER=admin
-DJANGO_ADMIN_EMAIL=admin@example.com
-DJANGO_ADMIN_PASSWORD=your_admin_password
+# OpenSearch
+OPENSEARCH_PASSWORD=Admin123!
 
 # Backend
-DB_ECHO=false
-DB_POOL_SIZE=10
-DB_MAX_OVERFLOW=20
-JWT_SECRET=your_jwt_secret
-JWT_ALG=HS256
-JWT_ACCESS_TTL_MIN=10080
+SECRET_KEY=dev_secret_key_change_in_production
+ENVIRONMENT=development
 
 # Telegram Bot
-TELOXIDE_TOKEN=your_telegram_bot_token
-RUN_MODE=polling
-LOG_LEVEL=info
+TELEGRAM_BOT_TOKEN=your_bot_token_here
 
-# DB pool/timing
-POSTGRES_MAX_CONNECTIONS=10
-POSTGRES_MIN_CONNECTIONS=1
-POSTGRES_CONNECT_TIMEOUT_SECS=8
-POSTGRES_IDLE_TIMEOUT_SECS=60
-POSTGRES_MAX_LIFETIME_SECS=1800
-POSTGRES_SQLX_LOGGING=true
-POSTGRES_SQLX_LOGGING_LEVEL=info
+# Frontend
+VITE_API_URL=http://localhost:8000
+VITE_WS_URL=ws://localhost:8000
 
-OS_INGEST_URL=http://log-ingest:8080/ingest
-OS_URL=http://os01:9200
+# Logging
+RUST_LOG=info
+
+# AI Service
+MODEL_PATH=/models
