Add Django admin service with DB triggers and migrations
2.1 Django ready() trigger hook:
- Add apps.py with CoreConfig and post_migrate hook
- Add db_triggers.py with set_updated_at() function
- Automatic trigger installation on all tables

2.2 Missing Django migrations:
- 0003: Add chat_messages_deleted to RuntimeStatistics
- 0004: Set server-side timestamp defaults
- 0005: Update Chat fields (allowed_mentions, cleanup renames, remove thresholds)
- Update models.py to match migration changes

2.3 ASGI entrypoint:
- Add asgi.py for async deployment support
- Update start.sh with ASGI documentation
- Add uvicorn dependency

2.4 Runtime pin/lock files:
- Add .python-version (3.13)
- Generate uv.lock with frozen dependencies
- Update Dockerfile to use uv

Additional:
- Add admin service to docker-compose.yml with health checks
- Update README with admin service and credentials
- Add DEPLOYMENT.md with comprehensive documentation
- Update .env.example with Django admin variables

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,11 @@ OPENSEARCH_PASSWORD=Admin123!
 SECRET_KEY=dev_secret_key_change_in_production
 ENVIRONMENT=development
 
+# Django Admin
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@susbonk.local
+DJANGO_SUPERUSER_PASSWORD=admin
+
 # Telegram Bot
 TELEGRAM_BOT_TOKEN=your_bot_token_here
 
