--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,6 +132,34 @@ services:
       - susbonk-net
 
   # Backend Services
+  admin:
+    build:
+      context: ./admin
+      dockerfile: Dockerfile
+    container_name: susbonk-admin
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB:-susbonk}
+      POSTGRES_USER: ${POSTGRES_USER:-susbonk}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-susbonk_dev}
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
+      JWT_SECRET: ${SECRET_KEY:-dev_secret_key_change_in_production}
+      DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME:-admin}
+      DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL:-admin@susbonk.local}
+      DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD:-admin}
+    ports:
+      - "8090:8090"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8090/admin/ || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+    networks:
+      - susbonk-net
+
   backend:
     build:
       context: ./backend
