feat: add Cargo.lock and example usage scripts for AI service
Task 3.1: Add Cargo.lock for deterministic builds
- Generate and commit Cargo.lock (216 packages)
- Remove Cargo.lock from .gitignore
- Update Dockerfile to use --locked flag
- Add dependency management documentation

Task 3.2: Add example usage scripts for Redis-stream workflow
- submit_task.py: Submit tasks to AI service
- tail_results.py: Monitor results stream
- demo.py: End-to-end demo (submit + wait)
- Comprehensive README with usage examples
- All scripts support environment variables and CLI args

Developers can now validate AI service in isolation without running the bot.

--- a/ai-service/Dockerfile
+++ b/ai-service/Dockerfile
@@ -10,12 +10,12 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
-# Copy source files
-COPY Cargo.toml Cargo.lock* ./
+# Copy dependency files
+COPY Cargo.toml Cargo.lock ./
 COPY src ./src
 
-# Build the service binary (release mode)
-RUN cargo build --release
+# Build the service binary (release mode) with locked dependencies
+RUN cargo build --release --locked
 
 # Runtime stage
 FROM debian:bookworm-slim
