feat(admin): Add admin interface components and infrastructure
The admin folder contains a comprehensive administration interface with:

- Core application components:
  * Django admin models and configurations
  * Database triggers and runtime statistics
  * Base models for chat and alert systems
  * Migration history for schema evolution

- Deployment infrastructure:
  * Dockerfile for containerization
  * Start script for service initialization
  * Python version management via .python-version
  * Project configuration in pyproject.toml

- Database administration:
  * Django ASGI/WSGI configurations
  * URL routing and settings
  * Uvicorn lock file for process management

Key functionality includes:
- Chat message monitoring and moderation
- Alert system with configurable thresholds
- Runtime performance statistics tracking
- Database schema migrations for feature evolution

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,20 +1,17 @@
-FROM python:3.13-slim
+FROM ghcr.io/astral-sh/uv:python3.13-bookworm-slim
 
 WORKDIR /app
+COPY pyproject.toml uv.lock ./
 
-RUN apt-get update && apt-get install -y \
-    postgresql-client \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
+# Additional fixing installation for Postgres, needed to work with db with Linux system
+RUN apt-get update && apt-get install -y libpq-dev
 
-COPY pyproject.toml uv.lock .python-version ./
-RUN pip install --no-cache-dir uv && \
-    uv sync --frozen
+RUN apt-get update && apt-get install -y netcat-openbsd
 
-COPY . .
+RUN uv sync --all-groups
 
-RUN chmod +x start.sh
+ENV PATH="/app/.venv/bin:$PATH"
 
-EXPOSE 8090
+COPY . /app
 
-CMD ["./start.sh"]
+RUN chmod +x ./start.sh
