--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -1,10 +1,11 @@
 [project]
-name = "susbonk-admin"
+name = "admin"
 version = "0.1.0"
+description = "Add your description here"
+readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "django>=6.0.1",
     "psycopg2-binary>=2.9.11",
     "python-dotenv>=1.2.1",
-    "uvicorn>=0.34.0",
 ]
