--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,22 @@ services:
     networks:
       - susbonk-net
 
+  opensearch-init:
+    image: curlimages/curl:latest
+    container_name: susbonk-opensearch-init
+    environment:
+      OPENSEARCH_URL: https://opensearch:9200
+      OPENSEARCH_USER: admin
+      OPENSEARCH_PASSWORD: ${OPENSEARCH_PASSWORD:-Admin123!}
+    volumes:
+      - ./log-platform/init:/init:ro
+    command: sh /init/init.sh
+    depends_on:
+      opensearch:
+        condition: service_healthy
+    networks:
+      - susbonk-net
+
   opensearch-dashboards:
     image: opensearchproject/opensearch-dashboards:2.11.0
     container_name: susbonk-dashboards
