--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -21,27 +21,8 @@ FROM nginx:alpine AS runner
 # Copy built static files
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Custom nginx config for SPA routing + API proxy
-RUN echo 'server { \
-    listen 3000; \
-    root /usr/share/nginx/html; \
-    index index.html; \
-    \
-    # API proxy - forwards /api/* to backend \
-    location /api/ { \
-    proxy_pass http://api-backend:8000/; \
-    proxy_http_version 1.1; \
-    proxy_set_header Host $host; \
-    proxy_set_header X-Real-IP $remote_addr; \
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; \
-    proxy_set_header X-Forwarded-Proto $scheme; \
-    } \
-    \
-    # SPA fallback \
-    location / { \
-    try_files $uri $uri/ /index.html; \
-    } \
-    }' > /etc/nginx/conf.d/default.conf
+# Copy nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port
 EXPOSE 3000
